chat/ci_cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  labels:
    app: chat
spec:
  selector:
    app: chat

  ports:
    - port: 8080
      targetPort: 8080
